# mlflow-operator

./: .dockerignore  .gitignore  .golangci.yml  .syft.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.konflux  Makefile  OWNERS  PROJECT  README.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
mlflow-tests/: README.md  pyproject.toml
mlflow-tests/ci/: integration-matrix.json
mlflow-tests/images/: .env  Dockerfile.konflux  README.md  collect-debug-logs.sh  patch-csv.sh  run-deploy.sh  run-integration-tests.sh  test-run.sh  test.Dockerfile
mlflow-tests/images/overlays/: mlflow-operator-csv-patch.json  mlflow-operator-pvc.yaml
mlflow-tests/src/mlflow_tests/: __init__.py
mlflow-tests/tests/: __init__.py  base.py  conftest.py  http_utils.py  test_artifacts.py  test_experiments.py  test_models.py  test_resource_map.py  test_trace_actions.py  test_traces.py  test_workspaces.py
mlflow-tests/tests/actions/: README.md  __init__.py  artifact_actions.py  experiment_actions.py  model_actions.py  trace_actions.py  workspace_actions.py
mlflow-tests/tests/constants/: __init__.py  config.py
mlflow-tests/tests/shared/: __init__.py  error_models.py  resource_map.py  test_context.py  test_data.py  user_info.py
mlflow-tests/tests/upgrade/: __init__.py  actions.py  phase_base.py  test_actions.py  test_conftest.py  test_utils.py  test_validations.py  utils.py  validations.py
mlflow-tests/tests/validations/: __init__.py  artifact_validations.py  experiment_validations.py  model_validations.py  trace_validations.py  validation_utils.py  workspace_validations.py
(+172 files in other folders)
